--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
+
+  "name": "landingCDG",
+
+  "version": "1.0.0",
+
+  "description": "",
+
+  "main": "index.js",
+
+  "scripts": {
+
+    "build": "tailwindcss build -i src/input.css -o dist/output.css",
+
+    "watch": "tailwindcss build -i src/input.css -o dist/output.css --watch"
+
+  },
+
+  "author": "",
+
+  "license": "ISC",
+
   "devDependencies": {
+
     "tailwindcss": "^3.2.4"
+
+  },
+
+  "dependencies": {
+
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+
+    "@tailwindcss/forms": "^0.5.3",
+
+    "@tailwindcss/line-clamp": "^0.4.2",
+
+    "@tailwindcss/typography": "^0.5.9"
+
   }
+
 }
+
