--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
 
   "devDependencies": {
 
+    "prettier": "^2.8.3",
+
+    "prettier-plugin-tailwindcss": "^0.2.2",
+
     "tailwindcss": "^3.2.4"
 
   },
